--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -42,8 +42,10 @@
   }
   &__title {
     display: block;
-    font-size: 18px;
-    font-style: italic;
+    font-size: 14px;
+    letter-spacing: 2px;
+    font-family: Helvetica Neue, Helvetica, sans-serif;
+    text-transform: uppercase;
   }
 }
 .home__banner {
