--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -324,8 +324,10 @@ footer p {
     margin-bottom: 15px; }
   .home__title {
     display: block;
-    font-size: 18px;
-    font-style: italic; }
+    font-size: 14px;
+    letter-spacing: 2px;
+    font-family: Helvetica Neue, Helvetica, sans-serif;
+    text-transform: uppercase; }
 
 .home__banner {
   width: 80%; }
