--- a/src/views/partials/_head.jade
+++ b/src/views/partials/_head.jade
@@ -1,5 +1,5 @@
 head
-  title Landing Page
+  title Weddings by Sanchez Studio
 
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge')
