Add home to nav

--- a/src/views/partials/_nav.jade
+++ b/src/views/partials/_nav.jade
@@ -8,6 +8,8 @@ header.nav-header
       span.nav__toggle__burger
     ul.nav__menu
       li.nav__item
+        a.nav__link(href='/') Home
+      li.nav__item
         a.nav__link(href='/about') About
       li.nav__item
         a.nav__link(href='/contact') Contact
