--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -42,10 +42,9 @@
   }
   &__title {
     display: block;
-    font-size: 12px;
-    letter-spacing: 3px;
-    font-family: Helvetica Neue, Helvetica, sans-serif;
-    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 0.075rem;
+    text-transform: lowercase;
   }
 }
 .home__banner {
