--- a/src/views/partials/_head.jade
+++ b/src/views/partials/_head.jade
@@ -6,4 +6,4 @@ head
   meta(name='viewport', content='width=device-width, initial-scale=1')
 
   link(rel='stylesheet', href='/assets/css/screen.css', type='text/css')
-  link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400i', type='text/css')
+  link(rel='stylesheet', href='<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i" rel="stylesheet">', type='text/css')
