--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -14,6 +14,10 @@
     margin-top: $margin-md;
   }
 }
+.seo-heading {
+  text-indent: -9999px;
+  line-height: 0;
+}
 .logo {
   display: inline-block;
   width: 197px;
