--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -298,6 +298,10 @@ footer p {
   .header p {
     margin-top: 15px; }
 
+.seo-heading {
+  text-indent: -9999px;
+  line-height: 0; }
+
 .logo {
   display: inline-block;
   width: 197px; }
