--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -2,6 +2,7 @@ extends ./layout.jade
 
 block content
   section.header
+    h1.seo-heading Sanchez Studio Co Weddings
     img.logo(src="/assets/images/logo.svg")
   section.home
     for item in galleries
