--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -2,7 +2,7 @@ extends ./layout.jade
 
 block content
   section.header
-    h1.seo-heading Sanchez Studio Co Weddings
+    h1.seo-heading Sanchez Studio Co Wedding Photography and Videography
     img.logo(src="/assets/images/logo.svg")
   section.home
     for item in galleries
