--- a/src/views/partials/_head.jade
+++ b/src/views/partials/_head.jade
@@ -6,6 +6,7 @@ head
   meta(name='viewport', content='width=device-width, initial-scale=1')
   meta(name='description', content='Custom wedding photography and videography studio serving brides and grooms in Columbus, Ohio, and the Midwest. Let us tell your story!')
   meta(name='keywords', content='sanchez, studio, sanchez studio, wedding 2016, wedding 2017 wedding photography, wedding videography, wedding photo, wedding video, wedding site and services')
+  meta(name='google-site-verification' content='8KgW6Cw63m2yuw-FKRhljNu1v4hrrfWRNPJCJsBuJcI')
   link(rel='canonical', href='http://weddings.sanchezstudio.co')
   link(rel='stylesheet', href='/assets/css/screen.css', type='text/css')
   link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400i', type='text/css')
