--- a/src/views/partials/_footer.jade
+++ b/src/views/partials/_footer.jade
@@ -1,2 +1,11 @@
 footer
+  ul.social
+    li.social__items
+      a.social__link(target="_blank" href="https://www.facebook.com/sscoweddings/") Facebook
+    li.social__items
+      a.social__link(target="_blank" href="https://www.instagram.com/sscoweddings/") Instagram
+    li.social__items
+      a.social__link(target="_blank" href="https://www.theknot.com/marketplace/sanchez-studio-columbus-oh-989067") The Knot
+    li.social__items
+      a.social__link(target="_blank" href="https://twitter.com/sscoweddings") Twitter
   p &copy; Copyright 2016 Sanchez Studio. All Rights Reserved.
