Adds investments page

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -27,6 +27,7 @@
 @import "modules/home";
 @import "modules/gallery";
 @import "modules/about";
+@import "modules/investment";
 @import "modules/contact";
 @import "modules/form";
 
