--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -92,6 +92,7 @@ header #logo_text {
     &:nth-of-type(1) { transition-delay: 0ms; }
     &:nth-of-type(2) { transition-delay: 100ms; }
     &:nth-of-type(3) { transition-delay: 200ms; }
+    &:nth-of-type(4) { transition-delay: 300ms; }
   }
   &__link {
     display: block;
