--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -136,12 +136,17 @@ p {
   text-transform: uppercase;
   border: none;
   outline: none;
-  background: #636263;
+  background-color: #636263;
   display: inline-block;
   color: #fff;
   width: auto;
   text-align: center;
-  padding: 10px; }
+  padding: 10px;
+  font-family: 'Crimson', serif;
+  cursor: pointer;
+  transition: 400ms ease; }
+  .btn:hover {
+    background-color: #494949; }
 
 /******************************************************************************
  * Modules
@@ -472,8 +477,36 @@ footer p {
     text-align: center; }
 
 .ghost {
+  position: relative;
   display: inline-block;
   vertical-align: middle; }
+
+.form {
+  position: relative;
+  z-index: 2;
+  opacity: 1;
+  transition: 600ms ease opacity; }
+  .success .form {
+    opacity: 0; }
+
+.form-success, .form-error {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+  opacity: 0;
+  transition: 600ms ease opacity; }
+
+.form-error h1 {
+  color: #cc0000; }
+
+.success .form-success {
+  opacity: 1; }
+
+.error .form-error {
+  opacity: 1; }
 
 form {
   text-align: left;
