--- a/src/views/partials/_nav.jade
+++ b/src/views/partials/_nav.jade
@@ -11,7 +11,7 @@ header.nav-header
         a.nav__link(href='/') Home
       li.nav__item
         a.nav__link(href='/about') About
-      //- li.nav__item
-      //-   a.nav__link(href='/investment') Investment
+      li.nav__item
+        a.nav__link(href='/investment') Investment
       li.nav__item
         a.nav__link(href='/contact') Contact
