--- a/scss/core/_document.scss
+++ b/scss/core/_document.scss
@@ -5,9 +5,10 @@
   box-sizing: border-box;
 }
 html, body {
+  position: relative;
   margin: 0;
   padding: 0;
-  height: 100%;
+  // height: 100%;
 }
 body {
   font-size: 100%;
@@ -27,7 +28,6 @@ section {
   display: block;
   width: 100%;
   max-width: 768px;
-  position: relative;
   margin-left: auto;
   margin-right: auto;
   padding-left: $padding-md;
@@ -37,5 +37,19 @@ section {
     max-width: 1024px;
     padding-left: 0;
     padding-right: 0;
+  }
+}
+.header {
+  display: block;
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  z-index: 2;
+  margin-bottom: $margin-xl;
+  p {
+    margin-top: $margin-md;
   }
 }
