--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -7,6 +7,7 @@ footer {
   width: 100%;
   padding: $padding-xl $padding-md;
   text-align: center;
+  z-index: 2;
 }
 footer p {
   font-size: 12px;
