--- a/scss/modules/_investment.scss
+++ b/scss/modules/_investment.scss
@@ -1,4 +1,5 @@
-.investment {
+.investments {
+  max-width: 768px;
   &:before {
     content: '';
     display: block;
@@ -7,6 +8,27 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
     background: url("/assets/images/investment/background.jpg");
+  }
+}
+.investment, .addons, .hesitate {
+  position: relative;
+  z-index: 2;
+  text-align: left;
+  margin-bottom: $margin-lg;
+  h1 { margin-bottom: $margin-md; }
+  @media screen and (min-width: 640px) {
+    text-align: center;
+  }
+}
+.investment {
+  @media screen and (min-width: 640px) {
+    display: inline-block;
+    width: 50%;
+    font-size: 0;
+    vertical-align: top;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 }
