--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -67,9 +67,9 @@ table {
   box-sizing: border-box; }
 
 html, body {
+  position: relative;
   margin: 0;
-  padding: 0;
-  height: 100%; }
+  padding: 0; }
 
 body {
   font-size: 100%;
@@ -89,7 +89,6 @@ section {
   display: block;
   width: 100%;
   max-width: 768px;
-  position: relative;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -100,6 +99,19 @@ section {
       max-width: 1024px;
       padding-left: 0;
       padding-right: 0; } }
+
+.header {
+  display: block;
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  z-index: 2;
+  margin-bottom: 50px; }
+  .header p {
+    margin-top: 15px; }
 
 h1 {
   font-size: 22px;
@@ -119,14 +131,14 @@ h2 {
     h2 {
       font-size: 24px; } }
 
-p {
+p, li {
   font-size: 16px;
   font-style: italic;
   letter-spacing: 0.05rem;
   line-height: 1.45;
-  margin-bottom: 15px; }
+  padding-bottom: 15px; }
   @media screen and (min-width: 640px) {
-    p {
+    p, li {
       font-size: 16px; } }
 
 .btn {
@@ -148,6 +160,10 @@ p {
   .btn:hover {
     background-color: #494949; }
 
+strong {
+  font-style: normal;
+  font-weight: 700; }
+
 /******************************************************************************
  * Modules
 *******************************************************************************/
@@ -163,7 +179,7 @@ header {
   font-size: 0;
   padding-left: 30px;
   padding-right: 30px;
-  margin-bottom: 100px;
+  margin-bottom: 125px;
   height: 65px;
   z-index: 10; }
   @media screen and (min-width: 768px) {
@@ -190,8 +206,7 @@ header #logo_text {
   position: relative;
   display: inline-block;
   width: 50%;
-  text-align: right;
-  background: #fff; }
+  text-align: right; }
   .nav__toggle {
     position: relative;
     width: 30px;
@@ -239,7 +254,10 @@ header #logo_text {
   .nav__item {
     opacity: 0;
     transform: translateX(20px);
-    transition: 600ms ease; }
+    transition: 600ms ease;
+    padding: 0;
+    margin: 0;
+    line-height: 1; }
     .is-menu-open .nav__item {
       opacity: 1;
       transform: translateX(0); }
@@ -273,7 +291,8 @@ footer {
   position: relative;
   width: 100%;
   padding: 50px 15px;
-  text-align: center; }
+  text-align: center;
+  z-index: 2; }
 
 footer p {
   font-size: 12px; }
@@ -315,18 +334,6 @@ footer p {
 /* ================================== */
 /* Home */
 /* ================================== */
-.header {
-  display: block;
-  position: relative;
-  width: 100%;
-  max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  margin-bottom: 50px; }
-  .header p {
-    margin-top: 15px; }
-
 .seo-heading {
   text-indent: -9999px;
   line-height: 0; }
@@ -439,15 +446,38 @@ footer p {
       background: url("/assets/images/about/about.jpg") no-repeat center center;
       background-size: cover; }
 
-.investment:before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("/assets/images/investment/background.jpg"); }
+.investments {
+  max-width: 768px; }
+  .investments:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: url("/assets/images/investment/background.jpg"); }
+
+.investment, .addons, .hesitate {
+  position: relative;
+  z-index: 2;
+  text-align: left;
+  margin-bottom: 30px; }
+  .investment h1, .addons h1, .hesitate h1 {
+    margin-bottom: 15px; }
+  @media screen and (min-width: 640px) {
+    .investment, .addons, .hesitate {
+      text-align: center; } }
+
+@media screen and (min-width: 640px) {
+  .investment {
+    display: inline-block;
+    width: 50%;
+    font-size: 0;
+    vertical-align: top;
+    padding-left: 32px;
+    padding-right: 32px; } }
 
 .contact {
   position: relative;
