--- a/src/views/investment.jade
+++ b/src/views/investment.jade
@@ -4,4 +4,26 @@ block content
   section.header
     h1 Bundles
     p Choose from our packages we offer in both photo and video
-  section#investment.investment
+  section#investments.investments
+    ul.investment
+      h1 Photo
+      li.investment__item #[strong 4 hours • $1365 • ]getting ready, portraits, ceremony, family photos, more portraits, reception coverage (none)
+      li.investment__item #[strong 6 hours • $1995 • ]getting ready, portraits, ceremony, family photos, more portraits, reception coverage (light)
+      li.investment__item #[strong 8 hours • $2450 • ]getting ready, portraits, ceremony, family photos, more portraits, reception coverage (full w/o send-off)
+      li.investment__item #[strong 10+ hours • $2940 • ]getting ready, portraits, ceremony, family photos, more portraits, reception coverage (full w/ send-off)
+    ul.investment
+      h1 Video
+      li.investment__item #[strong 4 hours • $1560 • ]getting ready, basic interview/message to partner, ceremony, bridal party and couple shots, reception coverage (none)
+      li.investment__item #[strong 6 hours • $2280 • ]getting ready, basic interview/message to partner, ceremony, bridal party and couple shots, reception coverage (light)
+      li.investment__item #[strong 8 hours • $2800 • ]getting ready, basic interview/message to partner, ceremony, bridal party and couple shots, reception coverage (full w/o send-off)
+      li.investment__item #[strong 10+ hours • $3360 • ]getting ready, basic interview/message to partner, ceremony, bridal party and couple shots, reception coverage (full w/ send-off)
+    ul.addons
+      h1 Photo addons
+      li.addons__item #[strong $300 •] engagement session
+      li.addons__item #[strong $250 •] rehearsal dinner
+      li.addons__item #[strong $100 per hour •] any extra events or happenings leading up to the big day
+    ul.addons
+      h1 Video addons
+      li.addons__item
+        #[strong $350 •] audio from the vows
+    p.hesitate Do not hesitate to #[a(href="/contact") contact] us if you're worried about anything. We're in the business of telling stories, and we would love to get the chance to tell yours.
