--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -255,6 +255,7 @@ header #logo_text {
     opacity: 0;
     transform: translateX(20px);
     transition: 600ms ease;
+    font-style: normal;
     padding: 0;
     margin: 0;
     line-height: 1; }
