Adds some formatting

--- a/src/views/investment.jade
+++ b/src/views/investment.jade
@@ -7,16 +7,16 @@ block content
   section#investments.investments
     ul.investment
       h1 Photo
-      li.investment__item #[strong 4 hours • $1365 • ]getting ready, portraits, ceremony, family photos, more portraits, reception coverage (none)
-      li.investment__item #[strong 6 hours • $1995 • ]getting ready, portraits, ceremony, family photos, more portraits, reception coverage (light)
-      li.investment__item #[strong 8 hours • $2450 • ]getting ready, portraits, ceremony, family photos, more portraits, reception coverage (full w/o send-off)
-      li.investment__item #[strong 10+ hours • $2940 • ]getting ready, portraits, ceremony, family photos, more portraits, reception coverage (full w/ send-off)
+      li.investment__item #[strong 4 hours • $1365]#[br]getting ready, portraits, ceremony, family photos, more portraits
+      li.investment__item #[strong 6 hours • $1995]#[br]getting ready, portraits, ceremony, family photos, more portraits, light reception coverage
+      li.investment__item #[strong 8 hours • $2450]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (w/o send-off)
+      li.investment__item #[strong 10+ hours • $2940]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (with send-off)
     ul.investment
       h1 Video
-      li.investment__item #[strong 4 hours • $1560 • ]getting ready, basic interview/message to partner, ceremony, bridal party and couple shots, reception coverage (none)
-      li.investment__item #[strong 6 hours • $2280 • ]getting ready, basic interview/message to partner, ceremony, bridal party and couple shots, reception coverage (light)
-      li.investment__item #[strong 8 hours • $2800 • ]getting ready, basic interview/message to partner, ceremony, bridal party and couple shots, reception coverage (full w/o send-off)
-      li.investment__item #[strong 10+ hours • $3360 • ]getting ready, basic interview/message to partner, ceremony, bridal party and couple shots, reception coverage (full w/ send-off)
+      li.investment__item #[strong 4 hours • 3-5 mins • $1560]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots
+      li.investment__item #[strong 6 hours • 6-8 mins • $2280]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, light reception coverage
+      li.investment__item #[strong 8 hours • 8-10 mins • $2800]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (w/o send-off)
+      li.investment__item #[strong 10+ hours • 12+ mins • $3360]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (with send-off)
     ul.addons
       h1 Photo addons
       li.addons__item #[strong $300 •] engagement session
