Fixes jade issue

--- a/src/views/investment.jade
+++ b/src/views/investment.jade
@@ -24,6 +24,5 @@ block content
       li.addons__item #[strong $100 per hour •] any extra events or happenings leading up to the big day
     ul.addons
       h1 Video addons
-      li.addons__item
-        #[strong $350 •] audio from the vows
+      li.addons__item #[strong $350 •] audio from the vows
     p.hesitate Do not hesitate to #[a(href="/contact") contact] us if you're worried about anything. We're in the business of telling stories, and we would love to get the chance to tell yours.
