Adds video, smooth scroll, nav effects, price changes

--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -21,3 +21,10 @@ $margin-xl: 50px;
 /* ================================== */
 
 $grey: #636263;
+
+/* ================================== */
+/* fonts */
+/* ================================== */
+
+$serif: 'Crimson', Georgia, serif;
+$sans: 'Helvetica Neue', 'Helvetica', sans-serif;
