--- a/src/views/investment.jade
+++ b/src/views/investment.jade
@@ -3,26 +3,29 @@ extends ./layout.jade
 block content
   section.header
     h1 Bundles
-    p Choose from our packages we offer in both photo and video
+    p Choose from our packages we offer in both photography and film.
   section#investments.investments
     ul.investment
-      h1 Photo
-      li.investment__item #[strong 4 hours • $1365]#[br]getting ready, portraits, ceremony, family photos, more portraits
-      li.investment__item #[strong 6 hours • $1995]#[br]getting ready, portraits, ceremony, family photos, more portraits, light reception coverage
+      h1 Photography
+      li.investment__item #[strong 4 hours • $1350]#[br]getting ready, portraits, ceremony, family photos, more portraits
+      li.investment__item #[strong 6 hours • $1950]#[br]getting ready, portraits, ceremony, family photos, more portraits, light reception coverage
       li.investment__item #[strong 8 hours • $2450]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (w/o send-off)
-      li.investment__item #[strong 10+ hours • $2940]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (with send-off)
+      li.investment__item #[strong 10+ hours • $2950]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (with send-off)
     ul.investment
-      h1 Video
-      li.investment__item #[strong 4 hours • 3-5 mins • $1560]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots
-      li.investment__item #[strong 6 hours • 6-8 mins • $2280]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, light reception coverage
+      h1 Film
+      li.investment__item #[strong 4 hours • 3-5 mins • $1550]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots
+      li.investment__item #[strong 6 hours • 6-8 mins • $2250]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, light reception coverage
       li.investment__item #[strong 8 hours • 8-10 mins • $2800]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (w/o send-off)
-      li.investment__item #[strong 10+ hours • 12+ mins • $3360]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (with send-off)
+      li.investment__item #[strong 10+ hours • 12+ mins • $3350]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (with send-off)
     ul.addons
-      h1 Photo addons
+      h1 Photography add-ons
       li.addons__item #[strong $300 •] engagement session
       li.addons__item #[strong $250 •] rehearsal dinner
-      li.addons__item #[strong $100 per hour •] any extra events or happenings leading up to the big day
+      li.addons__item #[strong $100/hr •] any extra events or happenings leading up to the big day
     ul.addons
-      h1 Video addons
+      h1 Film add-ons
+      li.addons__item #[strong $300 •] engagement session
+      li.addons__item #[strong $250 •] rehearsal dinner
       li.addons__item #[strong $350 •] audio from the vows
-    p.hesitate Do not hesitate to #[a(href="/contact") contact] us if you're worried about anything. We're in the business of telling stories, and we would love to get the chance to tell yours.
+      li.addons__item #[strong $100/hr •] any extra events or happenings leading up to the big day
+    p.hesitate Do not hesitate to #[a(href="/contact") contact] us if you're worried about anything.#[<br />]We're in the business of telling stories, and we would love to get the chance to tell yours.
