--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -41,3 +41,68 @@
 .home__banner {
   width: 80%;
 }
+
+.splash {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, .4);
+  }
+  &__logo {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+  }
+  &__video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    transform: translate(-50%, -50%);
+  }
+  &__caret {
+    display: inline-block;
+    position: absolute;
+    bottom: 3vh;
+    left: 50%;
+    font-size: 40px;
+    color: #fff;
+    text-decoration: none;
+    //transform: translateX(-50%) rotate(180deg);
+    transform-origin: 50% 50%;
+    z-index: 5;
+    font-family: $sans;
+    animation: bounce 3s infinite;
+    &:active, &:visited, &:focus, &:hover { color: #fff; }
+  }
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0) translateX(-50%) rotate(180deg);
+  }
+  40% {
+    transform: translateY(-15px) translateX(-50%) rotate(180deg);
+  }
+  60% {
+    transform: translateY(-5px) translateX(-50%) rotate(180deg);
+  }
+}
