--- a/scss/modules/_investment.scss
+++ b/scss/modules/_investment.scss
@@ -22,7 +22,7 @@
     text-align: center;
   }
 }
-.investment {
+.investment, .addons {
   @media screen and (min-width: 640px) {
     display: inline-block;
     width: 50%;
@@ -30,5 +30,6 @@
     vertical-align: top;
     padding-left: 32px;
     padding-right: 32px;
+    margin-bottom: 75px;
   }
 }
