--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -2,7 +2,9 @@
 /* NAVIGATION */
 /* ================================== */
 header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: block;
   width: 100%;
   text-align: left;
@@ -10,12 +12,8 @@ header {
   font-size: 0;
   padding-left: $padding-lg;
   padding-right: $padding-lg;
-  margin-bottom: 125px;
   height: 65px;
   z-index: 10;
-  @media screen and (min-width: 768px) {
-    margin-bottom: $margin-xl;
-  }
 }
 .nav, .nav-title {
   display: inline-block;
@@ -51,7 +49,6 @@ header #logo_text {
       height: 2px;
       background: $grey;
       transition: 200ms ease;
-      .is-menu-open & { background-color: transparent; }
       &:before, &:after {
         content: "";
         display: block;
@@ -66,6 +63,10 @@ header #logo_text {
       &:after { top: 10px; }
       .is-menu-open &:before { transform: rotate(45deg) }
       .is-menu-open &:after { transform: rotate(-45deg) }
+      .nav-is-white &,
+      .nav-is-white &:before,
+      .nav-is-white &:after { background: #fff; }
+      .is-menu-open & { background-color: transparent; }
     }
   }
   &__menu {
@@ -111,6 +112,11 @@ header #logo_text {
     &:focus {
       color: $grey;
     }
+    .nav-is-white &,
+    .nav-is-white &:visited,
+    .nav-is-white &:active,
+    .nav-is-white &:focus { color: #fff; }
+    .nav-is-white &:hover,
     &:hover { color: lighten($grey, 25%); }
   }
 }
