--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -10,6 +10,9 @@
 /* ================================== */
 /* Colors */
 /* ================================== */
+/* ================================== */
+/* fonts */
+/* ================================== */
 /******************************************************************************
  * Core
 *******************************************************************************/
@@ -69,11 +72,12 @@ table {
 html, body {
   position: relative;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  background-color: #fff; }
 
 body {
   font-size: 100%;
-  font-family: 'Crimson Text', Georgia, serif;
+  font-family: "Crimson", Georgia, serif;
   color: #636263; }
 
 img {
@@ -93,6 +97,8 @@ section {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px; }
+  section:first-of-type {
+    padding-top: 125px; }
   @media screen and (min-width: 1024px) {
     section {
       width: 71.11111%;
@@ -139,7 +145,7 @@ p, li {
   padding-bottom: 15px; }
   @media screen and (min-width: 640px) {
     p, li {
-      font-size: 16px; } }
+      font-size: 14px; } }
 
 .btn {
   min-width: 125px;
@@ -154,7 +160,7 @@ p, li {
   width: auto;
   text-align: center;
   padding: 10px;
-  font-family: 'Crimson', serif;
+  font-family: "Crimson", Georgia, serif;
   cursor: pointer;
   transition: 400ms ease; }
   .btn:hover {
@@ -171,7 +177,9 @@ strong {
 /* NAVIGATION */
 /* ================================== */
 header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: block;
   width: 100%;
   text-align: left;
@@ -179,12 +187,8 @@ header {
   font-size: 0;
   padding-left: 30px;
   padding-right: 30px;
-  margin-bottom: 125px;
   height: 65px;
   z-index: 10; }
-  @media screen and (min-width: 768px) {
-    header {
-      margin-bottom: 50px; } }
 
 .nav, .nav-title {
   display: inline-block;
@@ -221,8 +225,6 @@ header #logo_text {
       height: 2px;
       background: #636263;
       transition: 200ms ease; }
-      .is-menu-open .nav__toggle__burger {
-        background-color: transparent; }
       .nav__toggle__burger:before, .nav__toggle__burger:after {
         content: "";
         display: block;
@@ -241,6 +243,10 @@ header #logo_text {
         transform: rotate(45deg); }
       .is-menu-open .nav__toggle__burger:after {
         transform: rotate(-45deg); }
+      .nav-is-white .nav__toggle__burger, .nav-is-white .nav__toggle__burger:before, .nav-is-white .nav__toggle__burger:after {
+        background: #fff; }
+      .is-menu-open .nav__toggle__burger {
+        background-color: transparent; }
   .nav__menu {
     position: absolute;
     top: 100%;
@@ -281,7 +287,9 @@ header #logo_text {
     transition: 400ms ease; }
     .nav__link:visited, .nav__link:active, .nav__link:focus {
       color: #636263; }
-    .nav__link:hover {
+    .nav-is-white .nav__link, .nav-is-white .nav__link:visited, .nav-is-white .nav__link:active, .nav-is-white .nav__link:focus {
+      color: #fff; }
+    .nav-is-white .nav__link:hover, .nav__link:hover {
       color: #a3a2a3; }
 
 /* ================================== */
@@ -372,6 +380,61 @@ footer p {
 .home__banner {
   width: 80%; }
 
+.splash {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden; }
+  .splash:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.4); }
+  .splash__logo {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    transform: translate(-50%, -50%);
+    z-index: 3; }
+  .splash__video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    transform: translate(-50%, -50%); }
+  .splash__caret {
+    display: inline-block;
+    position: absolute;
+    bottom: 3vh;
+    left: 50%;
+    font-size: 40px;
+    color: #fff;
+    text-decoration: none;
+    transform-origin: 50% 50%;
+    z-index: 5;
+    font-family: "Helvetica Neue", "Helvetica", sans-serif;
+    animation: bounce 3s infinite; }
+    .splash__caret:active, .splash__caret:visited, .splash__caret:focus, .splash__caret:hover {
+      color: #fff; }
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0) translateX(-50%) rotate(180deg); }
+  40% {
+    transform: translateY(-15px) translateX(-50%) rotate(180deg); }
+  60% {
+    transform: translateY(-5px) translateX(-50%) rotate(180deg); } }
 /* ================================== */
 /* Gallery */
 /* ================================== */
@@ -472,13 +535,14 @@ footer p {
       text-align: center; } }
 
 @media screen and (min-width: 640px) {
-  .investment {
+  .investment, .addons {
     display: inline-block;
     width: 50%;
     font-size: 0;
     vertical-align: top;
     padding-left: 32px;
-    padding-right: 32px; } }
+    padding-right: 32px;
+    margin-bottom: 75px; } }
 
 .contact {
   position: relative;
