--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,10 +1,10 @@
 extends ./layout.jade
 
 block content
-  section.header
-    h1.seo-heading Sanchez Studio Co Wedding Photography and Videography
-    img.logo(src="/assets/images/logo.svg")
-  section.home
+  //- section.header
+    //- h1.seo-heading Sanchez Studio Co Wedding Photography and Videography
+    //- img.logo(src="/assets/images/logo.svg")
+  section#home.home
     for item in galleries
       a.home__item(href="/gallery/#{item.slug}")
         img.home__img(src="#{item.thumbnail}" alt="#{item.title}")
