Adds Taylor and Malisa to blog

--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -13,10 +13,11 @@
   position: relative;
   display: block;
   width: 100%;
-  text-align: center;
+  text-align: left;;
   font-size: 0;
   &__item {
     display: inline-block;
+    text-align: center;
     width: 100%;
     padding: 1rem;
     text-decoration: none;
@@ -86,7 +87,6 @@
     font-size: 40px;
     color: #fff;
     text-decoration: none;
-    //transform: translateX(-50%) rotate(180deg);
     transform-origin: 50% 50%;
     z-index: 5;
     font-family: $sans;
