--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -355,10 +355,11 @@ footer p {
   position: relative;
   display: block;
   width: 100%;
-  text-align: center;
+  text-align: left;
   font-size: 0; }
   .home__item {
     display: inline-block;
+    text-align: center;
     width: 100%;
     padding: 1rem;
     text-decoration: none; }
