--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -26,5 +26,5 @@ $grey: #636263;
 /* fonts */
 /* ================================== */
 
-$serif: 'Crimson', Georgia, serif;
+$serif: 'Crimson Text', Georgia, serif;
 $sans: 'Helvetica Neue', 'Helvetica', sans-serif;
