--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -77,7 +77,7 @@ html, body {
 
 body {
   font-size: 100%;
-  font-family: "Crimson", Georgia, serif;
+  font-family: "Crimson Text", Georgia, serif;
   color: #636263; }
 
 img {
@@ -143,9 +143,6 @@ p, li {
   letter-spacing: 0.05rem;
   line-height: 1.45;
   padding-bottom: 15px; }
-  @media screen and (min-width: 640px) {
-    p, li {
-      font-size: 14px; } }
 
 .btn {
   min-width: 125px;
@@ -160,7 +157,7 @@ p, li {
   width: auto;
   text-align: center;
   padding: 10px;
-  font-family: "Crimson", Georgia, serif;
+  font-family: "Crimson Text", Georgia, serif;
   cursor: pointer;
   transition: 400ms ease; }
   .btn:hover {
