Fixes contact padding

--- a/src/views/contact.jade
+++ b/src/views/contact.jade
@@ -1,7 +1,7 @@
 extends ./layout.jade
 
 block content
-  div#contact.contact
+  section#contact.contact
     div#form-container.ghost
       div.form
         h1 We'd love to work with you
