--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -87,17 +87,22 @@
     font-family: $sans;
     animation: bounce 3s infinite;
     &:active, &:visited, &:focus, &:hover { color: #fff; }
+    svg {
+      position: relative;
+      display: block;
+      width: 35px;
+    }
   }
 }
 
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0) translateX(-50%) rotate(180deg);
+    transform: translateY(0) translateX(-50%);
   }
   40% {
-    transform: translateY(-15px) translateX(-50%) rotate(180deg);
+    transform: translateY(-15px) translateX(-50%);
   }
   60% {
-    transform: translateY(-5px) translateX(-50%) rotate(180deg);
+    transform: translateY(-5px) translateX(-50%);
   }
 }
