--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -428,14 +428,18 @@ footer p {
     animation: bounce 3s infinite; }
     .splash__caret:active, .splash__caret:visited, .splash__caret:focus, .splash__caret:hover {
       color: #fff; }
+    .splash__caret svg {
+      position: relative;
+      display: block;
+      width: 35px; }
 
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0) translateX(-50%) rotate(180deg); }
+    transform: translateY(0) translateX(-50%); }
   40% {
-    transform: translateY(-15px) translateX(-50%) rotate(180deg); }
+    transform: translateY(-15px) translateX(-50%); }
   60% {
-    transform: translateY(-5px) translateX(-50%) rotate(180deg); } }
+    transform: translateY(-5px) translateX(-50%); } }
 /* ================================== */
 /* Gallery */
 /* ================================== */
