--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -10,7 +10,8 @@ html(lang="en")
           video.splash__video(poster="/assets/images/video/reel.jpg" playsinline muted loop autoplay)
             source(src="/assets/images/video/reel.mp4")
             source(src="/assets/images/video/reel.webm")
-          a.splash__caret(href="#welcome") ^
+          a.splash__caret(href="#welcome")
+            include ./../public/images/caret.svg
       include ./partials/_nav.jade
       block content
       include ./partials/_footer.jade
