--- a/scss/core/_document.scss
+++ b/scss/core/_document.scss
@@ -56,6 +56,11 @@ section {
   text-align: center;
   z-index: 2;
   margin-bottom: $margin-xl;
+  &--home h1 {
+    @media screen and (min-width: 640px) {
+      font-size: 42px;
+    }
+  }
   p {
     margin-top: $margin-md;
   }
