--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -116,6 +116,9 @@ section {
   text-align: center;
   z-index: 2;
   margin-bottom: 50px; }
+  @media screen and (min-width: 640px) {
+    .header--home h1 {
+      font-size: 42px; } }
   .header p {
     margin-top: 15px; }
 
