Add better meta for viewport

--- a/src/views/partials/_head.jade
+++ b/src/views/partials/_head.jade
@@ -3,7 +3,7 @@ head
 
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge')
-  meta(name='viewport', content='width=device-width, initial-scale=1')
+  meta(name="viewport", content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
   meta(name='description', content='Custom wedding photography and videography studio serving brides and grooms in Columbus, Ohio, and the Midwest. Let us tell your story!')
   meta(name='keywords', content='sanchez, studio, sanchez studio, wedding 2016, wedding 2017 wedding photography, wedding videography, wedding photo, wedding video, wedding site and services')
   link(rel='alternate' href='http://weddings.sanchezstudio.co' hreflang='en-us')
