--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -73,7 +73,8 @@ html, body {
   position: relative;
   margin: 0;
   padding: 0;
-  background-color: #fff; }
+  background-color: #fff;
+  width: 100%; }
 
 body {
   font-size: 100%;
