--- a/src/views/investment.jade
+++ b/src/views/investment.jade
@@ -3,20 +3,22 @@ extends ./layout.jade
 block content
   section.header
     h1 Let's make something beautiful.
-    p Choose from our packages we offer in both photography and video.
+    p Choose from our packages we offer in both photo and video.
   section#investments.investments
     ul.investment
       h1 Photo
-      li.investment__item #[strong 4 hours • $1350]#[br]getting ready, portraits, ceremony, family photos, more portraits
-      li.investment__item #[strong 6 hours • $1950]#[br]getting ready, portraits, ceremony, family photos, more portraits, light reception coverage
-      li.investment__item #[strong 8 hours • $2450]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (w/o send-off)
-      li.investment__item #[strong 10+ hours • $2950]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (with send-off)
+      li.investment__item Each package includes 2 shooters
+      li.investment__item #[strong 4 hours • $1500]#[br]getting ready, portraits, ceremony, family photos, more portraits
+      li.investment__item #[strong 6 hours • $2000]#[br]getting ready, portraits, ceremony, family photos, more portraits, light reception coverage
+      li.investment__item #[strong 8 hours • $2500]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (w/o send-off)
+      li.investment__item #[strong 10+ hours • $3000]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (with send-off)
     ul.investment
       h1 Video
-      li.investment__item #[strong 4 hours • 3-5 mins • $1550]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots
-      li.investment__item #[strong 6 hours • 6-8 mins • $2250]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, light reception coverage
-      li.investment__item #[strong 8 hours • 8-10 mins • $2800]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (w/o send-off)
-      li.investment__item #[strong 10+ hours • 12+ mins • $3350]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (with send-off)
+      li.investment__item Each package includes 2 shooters
+      li.investment__item #[strong 4 hours • 3-5 mins • $2000]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots
+      li.investment__item #[strong 6 hours • 6-8 mins • $2500]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, light reception coverage
+      li.investment__item #[strong 8 hours • 8-10 mins • $3000]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (w/o send-off)
+      li.investment__item #[strong 10+ hours • 12+ mins • $3500]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (with send-off)
     ul.addons
       h1 Photo add-ons
       li.addons__item #[strong $300 •] engagement session
