--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -3,27 +3,28 @@
 /* ================================== */
 .gallery {
   max-width: 768px;
-}
-.gallery__video-inner {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: percentage(360 / 640);
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
+  &__item, &__video {
     width: 100%;
-    height: 100%;
+    padding: 3px;
+    @media screen and (min-width: 1024px) {
+      padding: 5px;
+    }
   }
-}
-.gallery__item, .gallery__video {
-  width: 100%;
-  padding: 3px;
-  @media screen and (min-width: 1024px) {
-    padding: 5px;
+  &__video-inner {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: percentage(360 / 640);
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
-}
-.gallery__item--portrait {
-  width: 50%;
+  &__item {
+    width: 100%;
+    &--portrait { width: 50%; }
+  }
 }
