--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -16,9 +16,9 @@
     @media screen and (min-width: 768px) {
       width: 50%;
     }
-    @media screen and (min-width: 1024px) {
-      width: 33.33%;
-    }
+    // @media screen and (min-width: 1024px) {
+    //   width: 33.33%;
+    // }
   }
   &__img {
     display: block;
