--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -3,12 +3,16 @@
 /* ================================== */
 .gallery {
   max-width: 768px;
+  font-size: 0;
+  text-align: center;
   &__item, &__video {
-    width: 100%;
     padding: 3px;
     @media screen and (min-width: 1024px) {
       padding: 5px;
     }
+  }
+  &__video {
+    width: 100%;
   }
   &__video-inner {
     position: relative;
@@ -24,7 +28,28 @@
     }
   }
   &__item {
-    width: 100%;
+    display: inline-block;
+    vertical-align: middle;
     &--portrait { width: 50%; }
+    &--landscape, &--portrait-full { width: 100% }
+  }
+  &__inner {
+    position: relative;
+    height: 0;
+    .gallery__item--landscape & {
+      padding-bottom: percentage(1333 / 2000);
+    }
+    .gallery__item--portrait &,
+    .gallery__item--portrait-full & {
+      padding-bottom: percentage(2000 / 1333);
+    }
+  }
+  &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
   }
 }
