--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -2,12 +2,18 @@
 /* Gallery */
 /* ================================== */
 .gallery {
-  max-width: 768px;
+  max-width: 1024px;
   font-size: 0;
   text-align: center;
+  padding-left: 0;
+  padding-right: 0;
+  @media screen and (min-width: 768px) {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
   &__item, &__video {
-    padding: 3px;
-    @media screen and (min-width: 1024px) {
+    padding: 0 10px 10px;
+    @media screen and (min-width: 768px) {
       padding: 5px;
     }
   }
@@ -30,8 +36,11 @@
   &__item {
     display: inline-block;
     vertical-align: middle;
-    &--portrait { width: 50%; }
-    &--landscape, &--portrait-full { width: 100% }
+    width: 100%;
+    @media screen and (min-width: 768px) {
+      &--portrait { width: 50%; }
+      &--landscape, &--portrait-full { width: 100% }
+    }
   }
   &__inner {
     position: relative;
