--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -102,7 +102,6 @@ section {
     padding-top: 125px; }
   @media screen and (min-width: 1024px) {
     section {
-      width: 71.11111%;
       max-width: 1024px;
       padding-left: 0;
       padding-right: 0; } }
@@ -445,12 +444,18 @@ footer p {
 /* Gallery */
 /* ================================== */
 .gallery {
-  max-width: 768px;
+  max-width: 1024px;
   font-size: 0;
-  text-align: center; }
+  text-align: center;
+  padding-left: 0;
+  padding-right: 0; }
+  @media screen and (min-width: 768px) {
+    .gallery {
+      padding-left: 10px;
+      padding-right: 10px; } }
   .gallery__item, .gallery__video {
-    padding: 3px; }
-    @media screen and (min-width: 1024px) {
+    padding: 0 10px 10px; }
+    @media screen and (min-width: 768px) {
       .gallery__item, .gallery__video {
         padding: 5px; } }
   .gallery__video {
@@ -468,11 +473,13 @@ footer p {
       height: 100%; }
   .gallery__item {
     display: inline-block;
-    vertical-align: middle; }
-    .gallery__item--portrait {
-      width: 50%; }
-    .gallery__item--landscape, .gallery__item--portrait-full {
-      width: 100%; }
+    vertical-align: middle;
+    width: 100%; }
+    @media screen and (min-width: 768px) {
+      .gallery__item--portrait {
+        width: 50%; }
+      .gallery__item--landscape, .gallery__item--portrait-full {
+        width: 100%; } }
   .gallery__inner {
     position: relative;
     height: 0; }
