--- a/scss/core/_document.scss
+++ b/scss/core/_document.scss
@@ -17,7 +17,7 @@ body {
   font-family: $serif;
   color: $grey;
 }
-img {
+img, embed, object, video {
   max-width: 100%;
   vertical-align: top;
 }
