--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -26,5 +26,5 @@ $grey: #636263;
 /* fonts */
 /* ================================== */
 
-$serif: 'Crimson Text', Georgia, serif;
-$sans: 'Helvetica Neue', 'Helvetica', sans-serif;
+$serif: 'baskerville-urw', Georgia, serif;
+$sans: 'futura-pt', 'Helvetica Neue', 'Helvetica', sans-serif;
