--- a/src/views/partials/_head.jade
+++ b/src/views/partials/_head.jade
@@ -10,8 +10,10 @@ head
   meta(name='google-site-verification' content='8KgW6Cw63m2yuw-FKRhljNu1v4hrrfWRNPJCJsBuJcI')
   link(rel='canonical', href='http://weddings.sanchezstudio.co')
   link(rel='stylesheet', href='/assets/css/screen.css', type='text/css')
-  link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,700', type='text/css')
   link(rel="icon" href="/assets/images/favicon.png")
+  script(src="https://use.typekit.net/evc6zgj.js")
+  script.
+    try{Typekit.load({ async: true });}catch(e){}
   script.
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
