--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -66,6 +66,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    max-width: initial;
     min-width: 100%;
     min-height: 100%;
     width: auto;
