--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -8,6 +8,7 @@
   text-align: left;;
   font-size: 0;
   &__item {
+    position: relative;
     display: inline-block;
     text-align: center;
     width: 100%;
@@ -15,19 +16,37 @@
     text-decoration: none;
     @media screen and (min-width: 768px) {
       width: 50%;
+      width: calc(50% - 1rem);
+      padding: 0;
+      margin: .5rem .5rem;
     }
-    // @media screen and (min-width: 1024px) {
-    //   width: 33.33%;
-    // }
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, .3);
+      z-index: 1;
+    }
   }
   &__img {
+    position: relative;
     display: block;
-    margin-bottom: 15px;
   }
   &__title {
-    display: block;
-    font-size: 14px;
-    letter-spacing: 0.075rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: inline-block;
+    transform: translate(-50%, -50%);
+    font-size: 18px;
+    letter-spacing: 0.4rem;
+    z-index: 2;
+    color: #fff;
+    text-transform: uppercase;
+    width: 100%;
   }
 }
 .home__banner {
