--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -7,13 +7,14 @@
   width: 100%;
   text-align: left;;
   font-size: 0;
+  padding: 1rem;
   &__item {
     position: relative;
     display: inline-block;
     text-align: center;
     width: 100%;
-    padding: 1rem;
     text-decoration: none;
+    margin-bottom: 1rem;
     @media screen and (min-width: 768px) {
       width: 50%;
       width: calc(50% - 1rem);
