Adds Keren & Matt

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -6,5 +6,5 @@ block content
   section.home
     for item in galleries
       a.home__item(href="/gallery/#{item.slug}")
-        img.home__img(src="#{item.thumbnail}" alt="#{item.title}")
+        div.home__img(style="background-image: url('#{item.thumbnail}')")
         h3.home__title #{item.title}
