--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -35,6 +35,11 @@
   &__img {
     position: relative;
     display: block;
+    height: 0;
+    padding-bottom: percentage(512 / 768);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
   }
   &__title {
     position: absolute;
