--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -16,3 +16,4 @@ html(lang="en")
       block content
       include ./partials/_footer.jade
       script(src='/assets/js/app.js')
+      script(src="/reload/reload.js")
