--- a/src/views/investment.jade
+++ b/src/views/investment.jade
@@ -1,33 +1,8 @@
 extends ./layout.jade
 
 block content
-  section.header
-    h1 Let's make something beautiful.
-    p Choose from our packages we offer in both photo and video.
   section#investments.investments
-    ul.investment
-      h1 Photo
-      li.investment__item Each package includes 2 shooters and a full day of coverage
-      li.investment__item #[strong 200 - 350 images • $1500]
-      li.investment__item #[strong 350 - 500 images • $2000]
-      li.investment__item #[strong 500 - 650 images • $2500]
-      li.investment__item #[strong 650 - 800+ images • $3000]
-    ul.investment
-      h1 Video
-      li.investment__item Each package includes 2 shooters and a full day of coverage
-      li.investment__item #[strong 3 - 5 mins • $2000]
-      li.investment__item #[strong 6 - 8 mins • $2500]
-      li.investment__item #[strong 8 - 10 mins • $3000]
-      li.investment__item #[strong 10 - 12+ mins • $3500]
-    ul.addons
-      h1 Photo add-ons
-      li.addons__item #[strong $300 •] engagement session
-      li.addons__item #[strong $250 •] rehearsal dinner
-      li.addons__item #[strong $100/hr •] any extra events or happenings leading up to the big day
-    ul.addons
-      h1 Video add-ons
-      li.addons__item #[strong $300 •] engagement session
-      li.addons__item #[strong $250 •] rehearsal dinner
-      li.addons__item #[strong $350 •] audio from the vows
-      li.addons__item #[strong $100/hr •] any extra events or happenings leading up to the big day
-    p.hesitate Do not hesitate to #[a(href="/contact") contact] us if you're worried about anything.#[<br />]We're in the business of telling stories, and we would love to get the chance to tell yours.
+    h1 Pricing
+    p If you're looking for a ride or die photo/video team you've come to right dang place. Days, weeks, and months after the vows are made, the cake is cut, and you've danced your ass off to the greatest hits; you will be able to remember all of the most beautiful memories from your wedding day. Not because you asked your uncle Bill to set up his camera/camcorder in the back, but because you invested in two people that had your future friends and family in mind throughout one of the biggest days of your life. We're not just giving you digital files created by 1's and 0's, we're adding you to the squad. We'll be your open ear and your shoulder to lean on from day one. There to answer questions, keep the timeline, and get that stupid hair that always flies up to behave. Consider us the two extra guests you never knew you wanted and we'll make sure your investment doesn't go to waste.
+    p.price Photo &amp; Video packages start at $3000
+    p.hesitate Please #[a(href="/contact") contact us] for our detailed pricing info.#[<br />]We're in the business of telling stories, and we would love to get the chance to tell yours.
